--- a/bc_proj/main/templates/main/privacy_policy.html
+++ b/bc_proj/main/templates/main/privacy_policy.html
@@ -8,6 +8,8 @@
     <h1>Политика конфиденциальности</h1>
     <p>Добро пожаловать в косметологический центр “Галатея”. Мы заботимся о вашей конфиденциальности и защищаем ваши персональные данные. Настоящая Политика конфиденциальности объясняет, как мы собираем, используем и защищаем информацию о вас.</p>
 
+    <a href="#code-example">Перейти к примеру кода защиты данных и фигуре</a>
+
     <h2>1. Сбор личной информации</h2>
     <p>Мы можем собирать следующую информацию:</p>
     <ul>
@@ -51,7 +53,7 @@
         </tbody>
     </table>
 
-    <h2>4. Пример кода защиты данных</h2>
+    <h2 id="code-example">4. Пример кода защиты данных</h2>
     <listing>
     # Промежуточное программное обеспечение и декораторы для кликджекинга обеспечивают простую в использовании защиту против кликджекинга.
     # Установлен запрет показа содержимого XFrame, если источник содержимого имеет другой домен
