--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" id="html-root">
 
 {% load static %}
 
-<head>
+<head id="head-content">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,25 +14,26 @@
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
     <style>
-        .horizontal li {
+        #top-nav-list li {
             display: inline;
         }
     </style>
+    <link type="text/css" href="{% static 'main/css/styles.css' %}" rel="stylesheet"/>
+    {% block custom_css %} {% endblock %}
 </head>
 
-<body>
-    <header>
+<body id="body-content">
+    <header id="site-header">
         <div class="header-content">
-            <div class="logo">
+            <div class="logo" id="logo-block">
                 <img src="{% static 'main/logo_small.png' %}" alt="Логотип компании">
             </div>
-            <div class="org-info">
-                <h1><strong>Галатея</strong></h1>
-                <p class="slogan"><strong>Красота исходит изнутри</strong></p>
+            <div class="org-info" id="org-info-block">
+                <h1 id="org-name"><strong>Галатея</strong></h1>
+                <p class="slogan" id="org-slogan"><strong>Красота исходит изнутри</strong></p>
             </div>
-            <nav>
-                <ul class="horizontal">
-                    <!-- Second Block: Public Pages with User Data -->
+            <nav id="header-nav">
+                <ul class="horizontal" id="top-nav-list">
                     <li><a href="{% url 'contacts' %}">Контакты</a></li>
                     <li><a href="{% url 'vacancies' %}">Вакансии</a></li>
                     <li><a href="{% url 'reviews' %}">Отзывы</a></li>
@@ -40,18 +41,17 @@
             </nav>
         </div>
     </header>
-    <aside>
+
+    <aside id="sidebar-nav">
         <nav>
-            <ul>
-                <!-- First Block: Public Pages -->
+            <ul id="public-pages">
                 <li><a href="{% url 'home' %}">Главная</a></li>
                 <li><a href="{% url 'news' %}">Новости</a></li>
                 <li><a href="{% url 'faq' %}">FAQ</a></li>
                 <li><a href="{% url 'about' %}">О нас</a></li>
                 <li><a href="{% url 'policy' %}">Политика конфиденциальности</a></li>
             </ul>
-            <ul>
-                <!-- New Block: Services, Promocodes, Schedule, Statistics -->
+            <ul id="services-section">
                 <li><a href="{% url 'services' %}">Услуги</a></li>
                 <li><a href="{% url 'promocodes' %}">Промокоды</a></li>
                 {% if user.is_authenticated %} {% if not user.is_superuser %}
@@ -62,7 +62,7 @@
                 <li><a href="{% url 'basket' %}">Корзина</a></li>
                 {% endif %} {% endif %}
             </ul>
-            <ul>
+            <ul id="user-auth-section">
                 {% if user.is_authenticated %}
                 <li>
                     <form action="{% url 'logout' %}" method="post">
@@ -96,7 +96,8 @@
             </ul>
         </nav>
     </aside>
-    <main>
+
+    <main id="main-content">
         {% block content %} {% endblock %}
     </main>
 </body>
