--- a/bc_proj/main/static/main/css/styles.css
+++ b/bc_proj/main/static/main/css/styles.css
@@ -211,3 +211,62 @@ body {
     padding-top: 116px; /* Отступ, чтобы контент не был скрыт под шапкой */
     padding-left: 300px;
 }
+
+/*прелоадер*/
+.container {
+    position: relative;
+    height: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.bar {
+    width: 100px;
+    height: 20px;
+    margin: 5px 0;
+    animation: rotate 2s ease-in-out infinite;
+}
+
+.bar:nth-child(5) {
+    background-color: #ff7bac;
+    animation-delay: 0.8s;
+    transform-origin: 150px center;
+}
+
+.bar:nth-child(4) {
+    background-color: #ff1d25;
+    animation-delay: 0.75s;
+    transform-origin: 120px center;
+}
+
+.bar:nth-child(3) {
+    background-color: #ff931e;
+    animation-delay: 0.7s;
+    transform-origin: 90px center;
+}
+
+.bar:nth-child(2) {
+    background-color: #7ac943;
+    animation-delay: 0.65s;
+    transform-origin: 60px center;
+}
+
+.bar:nth-child(1) {
+    background-color: #3fa9f5;
+    animation-delay: 0.60s;
+    transform-origin: 30px center;
+}
+
+@keyframes rotate {
+    0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(-50%, -50%) rotate(-360deg);
+    }
+}
