--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -9,32 +9,64 @@
 <meta name="keywords" content="косметология, услуги, акции, партнеры, Галатея">
 {% endblock %}
 
-{% block content %}
-    <section id="user-info">
-        <p class="current-date">Текущая дата: {{ current_date|date:"d/m/Y" }}</p>
-        <p class="user-timezone">Часовой пояс пользователя: {{ user_timezone }}</p>
-        <p class="utc-offset">Разница в часах от UTC: {{ utc_offset }}</p>
-    </section>
+{% block custom_css %}
+<link type="text/css" href="{% static 'main/css/index.css' %}" rel="stylesheet"/>
+{% endblock %}
 
-    <section id="calendar-section">
-        <p class="calendar-label">Календарь:</p>
-        <h3 class="month-name">{{ month_name }}</h3>
-        <table class="calendar-table">
-            {% for week in calendar_month %}
-                <tr class="calendar-week">
-                    {% for day in week %}
-                        <td class="calendar-day">
-                            {% if day == current_day %}
-                                <strong class="current-day">{{ day }}</strong>
-                            {% elif day != 0 %}
-                                {{ day }}
-                            {% endif %}
-                        </td>
+{% block content %}
+    <div class="page-layout">
+        <div class="info-section">
+            <section id="user-info">
+                <p class="current-date">Текущая дата: {{ current_date|date:"d/m/Y" }}</p>
+                <p class="user-timezone">Часовой пояс пользователя: {{ user_timezone }}</p>
+                <p class="utc-offset">Разница в часах от UTC: {{ utc_offset }}</p>
+            </section>
+
+            <section id="calendar-section">
+                <h3 class="month-name">{{ month_name }}</h3>
+                <table class="calendar-table">
+                    {% for week in calendar_month %}
+                        <tr class="calendar-week">
+                            {% for day in week %}
+                                <td class="calendar-day">
+                                    {% if day == current_day %}
+                                        <strong class="current-day">{{ day }}</strong>
+                                    {% elif day != 0 %}
+                                        {{ day }}
+                                    {% endif %}
+                                </td>
+                            {% endfor %}
+                        </tr>
                     {% endfor %}
-                </tr>
-            {% endfor %}
-        </table>
-    </section>
+                </table>
+            </section>
+        </div>
+
+        <div class="girl-container">
+            <div class="bezel">
+                <div class="custom-paint-brush">
+                    <div class="custom-brush"></div>
+                </div>
+                <div class="girl">
+                    <div class="box">
+                        <div class="hair"></div>
+                        <div class="fringe"></div>
+                        <div class="head">
+                            <div class="eyes">
+                                <div class="eye one"></div>
+                                <div class="eye two"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth"></div>
+                        </div>
+                        <div class="neck"></div>
+                        <div class="body"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <section class="banner">
         <div class="banner-container">
